28.1.11
-------

28.1.10
------
(RB=1932852)
Expose some utility methods for use elsewhere

(RB=1929668)
Expose action return type in FilterRequestContext

28.1.9
------
(RB=1929558)
Add back TransportHealthCheck constructor and deprecate it.

28.1.8
------
(RB=1927937)
Do not share RequestContext and wire attributes between D2 healthcheck requests.

28.1.7
------
(RB=1925299)
Expose some methods in the protobuf codec for inheritors to customize

28.1.6
------
(RB=1918095)
Add additional debug logging to RequestFinalizers.

28.1.5
------
Empty commit to trigger a new release

28.1.4
------
(RB=1921104)
Clean up some javadocs to reduce javadoc warnings during build

(RB=1888928)
Add schemaAnnotationProcessor and other related schema annotation processing feature

28.1.3
------
(RB=1920382)
Revert "dark cluster schema and serializer changes"

(RB=1919524)
Use PDL in examples and restli-example-api

(RB=1882175)
Dark cluster schema and serializer changes

(RB=1919280)
Use unmodifiableSortedMap instead of unModifiableMap when wrapping treemaps to ensure that bulk copy operations are faster when copied onto another TreeMap.

(RB=1913253)
Fix convertToPdl tool validation issue when there is an extra whitespace in the beginning of a line in doc.

(RB=1879153)
add DataSchemaRichContextTraverser, introduce DataSchemaRichContextTraverser.SchemaVisitor interface

28.1.2
------
(RB=1913804)
Lower latency instrumentation logs from warn to debug

28.1.1
------
(RB=1911165)
Minor performance optimization to use indexOf instead of split. Split internally uses indexOf but only if the regex length is 1. Since | has a special meaning in regex land, we need to escape it, meaning that we end up losing out on this internal optimization.

(RB=1904923)
Update convertToPdl tool to preserve source history

28.1.0
------
(RB=1745931)
Add integration testing for latency instrumentation

(RB=1745924)
Add instrumentation timing markers for projection mask application

(RB=1745918)